--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 
 body {
     align-items: center;
-    background: rgb(71,0,111);
-    background: radial-gradient(circle, rgba(71,0,111,1) 8%, rgba(36,0,59,1) 95%);
+    background: rgb(71, 0, 111);
+    background: radial-gradient(circle, rgba(71, 0, 111, 1) 8%, rgba(36, 0, 59, 1) 95%);
     display: flex;
     height: 100vh;
     justify-content: center;
@@ -14,8 +14,8 @@ body {
 
 .container {
     align-items: center;
-    background: rgb(57,57,57);
-    background: linear-gradient(135deg, rgba(57,57,57,1) 0%, rgba(0,0,0,1) 100%);
+    background: rgb(57, 57, 57);
+    background: linear-gradient(135deg, rgba(57, 57, 57, 1) 0%, rgba(0, 0, 0, 1) 100%);
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
@@ -25,7 +25,7 @@ body {
 }
 
 
-/* 
+/*
 --------------------
     NAVBAR
 --------------------
@@ -52,17 +52,15 @@ body {
 
 .nav-menu {
     align-items: center;
-    border-radius: 0 0 5px 0;
-    color: #fff;
     cursor: pointer;
     display: flex;
-    font-size: 30px;
     height: 100%;
     justify-content: center;
     padding: 20px;
 }
 
-.nav-menu:hover, .nav-links li:hover {
+.nav-menu:hover,
+.nav-links li:hover {
     background: #00515c;
     transition: background .3s;
 }
@@ -106,25 +104,89 @@ body {
     display: none;
 }
 
-#nav-check:checked ~ .nav-links {
+#nav-check:checked~.nav-links {
     transform: scaleY(1);
 }
 
-/* 
+/*
 --------------------
     END NAVBAR
 --------------------
 */
 
+/*
+--------------------
+    MENU ICON
+--------------------
+*/
 
-/* 
+.menu-icon {
+    width: 35px;
+    height: 3px;
+    background: #FCFCFC;
+    position: relative;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+    transition: 0.5s;
+    border-radius: 10px;
+}
+
+.menu-icon::before {
+    top: -13px;
+}
+
+.menu-icon::after {
+    top: 13px;
+}
+
+/* Nav menu container */
+.nav-menu {
+    position: relative;
+    cursor: pointer;
+}
+
+.menu-icon:before,
+.menu-icon:after {
+    content: '';
+    position: absolute;
+    width: 35px;
+    height: 3px;
+    background: #FCFCFC;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition: 0.5s;
+    border-radius: 10px;
+}
+
+#nav-check:checked~.nav-menu.active .menu-icon {
+    background: rgba(0, 0, 0, 0);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
+}
+
+#nav-check:checked~.nav-menu.active .menu-icon:before {
+    top: 0;
+    transform: rotate(45deg);
+}
+
+#nav-check:checked~.nav-menu.active .menu-icon:after {
+    top: 0;
+    transform: rotate(135deg);
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+}
+
+/*
+--------------------
+    END MENU ICON
+--------------------
+*/
+
+
+/*
 --------------------
     CARD
 --------------------
 */
 .card {
-    background: rgb(57,57,57);
-    background: linear-gradient(135deg, rgba(57,57,57,1) 0%, rgba(0,0,0,1) 100%);
+    background: rgb(57, 57, 57);
+    background: linear-gradient(135deg, rgba(57, 57, 57, 1) 0%, rgba(0, 0, 0, 1) 100%);
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     height: 576px;
@@ -134,7 +196,7 @@ body {
     position: relative;
 }
 
-.card > .card-header {
+.card>.card-header {
     align-items: center;
     border-radius: 20px 0;
     color: #fff;
@@ -145,28 +207,29 @@ body {
     width: 100%;
 }
 
-.card > .card-header h3 {
+.card>.card-header h3 {
     font-size: 20px;
     font-weight: 500;
 }
 
-.card > .card-header h3 p {
+.card>.card-header h3 p {
     font-size: 15px;
 }
 
-.card > .card-header > .card-header__user {
+.card>.card-header>.card-header__user {
     align-items: center;
     border-radius: 50%;
     display: flex;
     height: 50px;
     width: 50px;
 }
-.card > .card-header > .card-header__user img {
+
+.card>.card-header>.card-header__user img {
     border-radius: 50%;
     object-fit: cover;
 }
 
-.card > .card-body {
+.card>.card-body {
     position: absolute;
     width: 100%;
     height: 50%;
@@ -176,7 +239,7 @@ body {
     align-items: center;
 }
 
-/* 
+/*
 --------------------
     END CARD
 --------------------
