--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body {
 }
 
 .nav-menu:hover,
-.nav-links li:hover {
+.nav-links .nav-item:hover {
     background: #00515c;
     transition: background .3s;
 }
@@ -82,22 +82,57 @@ body {
 }
 
 .nav-links ul {
+    background: #005C69;
     list-style: none;
     text-align: center;
     width: 100%;
-    background: #005C69;
 }
 
-.nav-links li {
-    display: block;
-    padding: 20px;
+.nav-links .nav-item {
+    background: #005C69;
     cursor: pointer;
-    background: #005C69;
+    display: block;
+    padding: 15px;
 }
 
-.nav-links li a {
-    text-decoration: none;
+.nav-links .nav-item a,
+.dropdown-menu .dropdown-item {
     color: #fff;
+    text-decoration: none;
+}
+
+.dropdown i {
+    position: absolute;
+    right: 30px;
+    transition: transform .5s;
+}
+
+.dropdown.active i {
+    transform: rotate(180deg);
+}
+
+.dropdown-menu {
+    background: #005967;
+    display: flex;
+    flex-direction: column;
+    height: 0;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform .2s, height .2s;
+}
+
+.dropdown.active ~ .dropdown-menu {
+    height: 141px;
+    transform: scaleY(1);
+}
+
+.dropdown-menu .dropdown-item {
+    font-size: 15px;
+    padding: 15px;
+}
+
+.dropdown-menu .dropdown-item:hover {
+    background: #00515c;
 }
 
 #nav-check {
@@ -121,7 +156,7 @@ body {
 */
 
 .menu-icon {
-    width: 35px;
+    width: 30px;
     height: 3px;
     background: #FCFCFC;
     position: relative;
@@ -131,11 +166,11 @@ body {
 }
 
 .menu-icon::before {
-    top: -13px;
+    top: -10px;
 }
 
 .menu-icon::after {
-    top: 13px;
+    top: 10px;
 }
 
 /* Nav menu container */
@@ -148,7 +183,7 @@ body {
 .menu-icon:after {
     content: '';
     position: absolute;
-    width: 35px;
+    width: 30px;
     height: 3px;
     background: #FCFCFC;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -191,8 +226,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     height: 576px;
     margin: 50px;
-    width: 476px;
-
+    width: 380px;
     position: relative;
 }
 
@@ -232,7 +266,7 @@ body {
 .card>.card-body {
     position: absolute;
     width: 100%;
-    height: 50%;
+    height: 10%;
     display: flex;
     flex-direction: column;
     justify-content: center;
